[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["wafuwafu13 <mariobaske@i.softbank.jp>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/wafuwafu13/wasm-tutorial/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
